--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,11 @@
 2017-01-12  Martin Sebor  <msebor@redhat.com>
 
+	PR c/79074
+	* c-c++-common/Waddress-2.c: Remove a test to avoid a C failure
+	due to the referenced bug.
+
+2017-01-12  Martin Sebor  <msebor@redhat.com>
+
 	PR testsuite/79073
 	* gcc.dg/pr78973.c: Xfail on ILP32 targets.
 
