--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-12  David Edelsohn  <dje.gcc@gmail.com>
+
+	* gcc.dg/pr78768.c: Require LTO.
+
 2017-01-12  Martin Sebor  <msebor@redhat.com>
 
 	PR c/79074
