--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-12  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/79069
+	* cfgrtl.c (rtl_tidy_fallthru_edge): For any_uncondjump_p that can't
+	be removed due to side-effects, don't remove following barrier nor
+	turn the successor edge into fallthru edge.
+
 2017-01-12  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	PR target/79044
