--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-12  Martin Sebor  <msebor@redhat.com>
+
+	(-Wformat-overflow): ...to this.
+
 2017-01-11  Martin Sebor  <msebor@redhat.com>
 
 	PR c/78768
