--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-12  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/79004
+	* config/rs6000/rs6000.md (FP_ISA3): Do not optimize converting
+	char or short to __float128/_Float128 directly.
+
 2017-01-12  Martin Sebor  <msebor@redhat.com>
 
 	to -Wformat-overflow.
