--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-12  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/79004
+	* gcc.target/powerpc/pr79004.c: New test.
 2017-01-12  Martin Sebor  <msebor@redhat.com>
 
 	* gcc.dg/pr78138.c: Adjust.
