--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-13  Richard Biener  <rguenther@suse.de>
 
+	* gcc.dg/gimplefe-22.c: New testcase.
+
+2017-01-13  Richard Biener  <rguenther@suse.de>
+
 	PR tree-optimization/77283
 	* gcc.dg/tree-ssa/split-path-7.c: Adjust.
 	* gcc.dg/tree-ssa/split-path-8.c: New testcase.
