--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2017-01-13  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/77283
+	* gcc.dg/tree-ssa/split-path-9.c: Fix.
+
+2017-01-13  Richard Biener  <rguenther@suse.de>
+
 	* gcc.dg/gimplefe-22.c: New testcase.
 
 2017-01-13  Richard Biener  <rguenther@suse.de>
